# 1c-edu

./: .gitattributes  .gitignore  1Cv8.dt  README.md
Конфигурация/: ConfigDumpInfo.xml  Configuration.xml
Конфигурация/AccumulationRegisters/: БаллыОпыта.xml
Конфигурация/Catalogs/: Бейджи.xml  Курсы.xml  МатериалыБиблиотеки.xml  Пользователи.xml  ПравилаНачисленияБаллов.xml  ПрактическиеЗадания.xml  Темы.xml  ТестовыеЗадания.xml  УчебныеГруппы.xml
Конфигурация/CommonModules/: АдаптивноеТестирование.xml  АдаптивноеТестированиеЛокально.xml  АналитикаПрогресса.xml  Геймификация.xml  ДанныеДашборда.xml  КлиентIRTСервиса.xml  ОбслуживаниеПользователейВызовСервера.xml  ОбщегоНазначенияСерверПриложение.xml  ПроверкаПрактическихЗаданий.xml  РегламентныеЗаданияОбработчикиПолныеПрава.xml  ТраекторияОбучения.xml
Конфигурация/Constants/: URLМикросервисаIRT.xml  ЛимитЗаданийВСессии.xml  ПорогОтветовДляКалибровки.xml  ПорогТетаДляПрохожденияТемы.xml  ТаймаутЗапросаКМикросервису.xml  ЦелеваяСтандартнаяОшибкаТета.xml
Конфигурация/DataProcessors/: ПервоначальноеНаполнение.xml  ПросмотрКниги.xml  РабочийСтолОбучающегося.xml  РабочийСтолПреподавателя.xml
Конфигурация/Documents/: ВыдачаБейджа.xml  ВыполнениеПрактическогоЗадания.xml  ИзучениеМатериала.xml  НачислениеБаллов.xml  ПопыткаТеста.xml
Конфигурация/Enums/: ВидыМатериаловБиблиотеки.xml  ВидыПользователей.xml  КатегорииБейджей.xml  ПричиныНачисленияБаллов.xml  СтатусыКалибровкиЗадания.xml  ТипыСобытийАналитики.xml  ТипыТестовыхЗаданий.xml
Конфигурация/Ext/: HomePageWorkArea.xml  ManagedApplicationModule.bsl  SessionModule.bsl
Конфигурация/InformationRegisters/: ПараметрыIRT.xml  (+5 more)
Микросервис_IRT/: README.md  pyproject.toml
Микросервис_IRT/app/: __init__.py  calibration.py  irt_2pl.py  irt_rasch.py  main.py  schemas.py  selector.py  stopping.py
Микросервис_IRT/tests/: conftest.py  test_calibration.py  test_rasch.py  test_selector.py
Микросервис_IRT/tests/integration/: conftest.py  test_endpoints.py
(+117 files in other folders)
