[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irt_service"
version = "0.1.0"
description = "Микросервис IRT для приложения автоматизированного обучения и тестирования по платформе 1С 8.3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary (academic use)" }
authors = [
    { name = "Eva", email = "tec.mezex@gmail.com" }
]
keywords = ["irt", "rasch", "2pl", "adaptive-testing", "1c", "education"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education :: Testing",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Documentation = "../Конфигурация/docs/architecture.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# RUF001–003 — предупреждения о «неоднозначных» кириллических символах;
# проект намеренно русскоязычный (см. соглашения об именовании), поэтому отключены.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
